--- a/config.json
+++ b/config.json
@@ -1,10 +1,10 @@
 {
-  "name": "Eufy Security Add-on",
-  "version": "1.3.0",
+  "name": "Eufy Security Add-on Alpha",
+  "version": "5.2.6",
   "slug": "eufy_security_addon",
   "description": "eufy_security_addon add-on eufy security websocket",
   "uart": true,
-  "url": "https://github.com/fuatakgun/eufy_security_addon",
+  "url": "https://github.com/Cyclone47/eufy_security_addon",
   "startup": "application",
   "services": [],
   "arch": [
